list page resource bundle ok

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,8 +4,10 @@ breadcrumb.admin.users.add=Add
 
 label.add=Add
 label.remove=Remove
+label.change=Change
 
 #page admin/users
 label.user.username=Username
 label.user.fullname=Full Name
 label.user.password=Password
+
