add page labels

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,9 +5,11 @@ breadcrumb.admin.users.add=Add
 label.add=Add
 label.remove=Remove
 label.change=Change
+label.save=Save
 
 #page admin/users
 label.user.username=Username
 label.user.fullname=Full Name
 label.user.password=Password
+label.user.password.confirm=Confirm Password
 
