--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,3 +13,6 @@ label.user.fullname=Full Name
 label.user.password=Password
 label.user.password.confirm=Confirm Password
 
+#validator
+validator.required=[{0}] is required.
+validator.not.same=[{0}] and [{1}] are not the same.
