validation seems ok

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,12 +6,15 @@ label.add=Add
 label.remove=Remove
 label.change=Change
 label.save=Save
+label.yes=Yes
+label.no=No
 
 #page admin/users
 label.user.username=Username
 label.user.fullname=Full Name
 label.user.password=Password
 label.user.password.confirm=Confirm Password
+label.user.enabled=Enabled
 
 #validator
 validator.required=[{0}] is required.
