user delete capability

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,3 +19,6 @@ label.user.enabled=Enabled
 #validator
 validator.required=[{0}] is required.
 validator.not.same=[{0}] and [{1}] are not the same.
+
+#dialog
+dialog.confirm.delete=Delete [{{id}}]?
