todo role capability

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,6 +8,7 @@ label.change=Change
 label.save=Save
 label.yes=Yes
 label.no=No
+label.edit=Edit
 
 #page admin/users
 label.user.username=Username
@@ -15,6 +16,7 @@ label.user.fullname=Full Name
 label.user.password=Password
 label.user.password.confirm=Confirm Password
 label.user.enabled=Enabled
+label.user.roles=Roles
 
 #validator
 validator.required=[{0}] is required.
