100% js code coverage

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ label.save=Save
 label.yes=Yes
 label.no=No
 label.edit=Edit
+label.ok=OK
 
 #page admin/users
 label.user.username=Username
@@ -24,3 +25,4 @@ validator.not.same=[{0}] and [{1}] are not the same.
 
 #dialog
 dialog.confirm.delete=Delete [{{id}}]?
+dialog.error.delete=An error has occured. Please reload the page and try again. Please contact tech support if error persists.
